[package]
name = "linux-wp-preview"
description = "a small tui to preview wallpapers with wallpaper engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
dirs = "5.0.1"
lazy_static = "1.4.0"
tui = "0.19.0"
